Bug 1040087 - For root scroll frames, use the canvas background color calculated by the pres shell when overscrolling. r=tn